--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ section {
     overflow: hidden;
     z-index: 0;
     margin-top: 1rem;
-}
+}#this section defines the button style
 
 .btn::before {
     content: '';
